fix(merlin-www-bbcode): correct spacing for gq ol elements

--- a/packages/merlin-www-bbcode/sass/gq/gq.scss
+++ b/packages/merlin-www-bbcode/sass/gq/gq.scss
@@ -145,6 +145,8 @@
 
     .bb-li {
         counter-increment: section;
+        margin: 15px 0;
+        line-height: 25px;
     }
 
     .bb-li:before {
